--- a/app/src/main/res/layout/activity_chapter2.xml
+++ b/app/src/main/res/layout/activity_chapter2.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="40dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -27,10 +29,6 @@
             android:textSize="25sp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/search" />
     </LinearLayout>
 
     <LinearLayout
@@ -41,256 +39,195 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="8dp"
         android:background="@drawable/bg_button"
         android:orientation="vertical">
 
-        <!-- Chain Force -->
+        <!-- Công suất trên trục công tác -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
-            android:text="Chain Force"
+            android:text="Công suất trên trục công tác (kW)"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginLeft="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
             android:layout_marginBottom="6dp"
             android:background="@drawable/grey_container"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_weight="1"
-                android:textColor="#449D00"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
+            <EditText
+                android:id="@+id/PValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="N"
-                android:textSize="18sp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif"
+                android:hint="Nhập giá trị"
+                android:inputType="numberDecimal"
+                android:lineSpacingExtra="0sp"
+                android:selectAllOnFocus="false"
+                android:singleLine="false"
+                android:textColor="#449D00"
+                android:textSize="16sp"
                 android:textStyle="bold" />
+
         </LinearLayout>
 
-        <!-- Chain Velocity -->
+        <!-- Vận tốc xích tải -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:text="Chain Velocity"
+            android:text="Vận tốc xích tải (m/s)"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginLeft="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
             android:layout_marginBottom="6dp"
             android:background="@drawable/grey_container"
             android:orientation="horizontal">
 
-            <TextView
+            <EditText
+                android:id="@+id/vValue"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:hint="Nhập giá trị"
+                android:inputType="numberDecimal"
                 android:textColor="#449D00"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="m/s"
-                android:textSize="18sp"
-                android:textStyle="bold" />
         </LinearLayout>
 
-        <!-- Efficiency -->
+        <!-- Số răng đĩa xích nhỏ -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:text="Chain Pitch"
+            android:text="Số răng đĩa xích nhỏ (z1)"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginLeft="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
             android:layout_marginBottom="6dp"
             android:background="@drawable/grey_container"
             android:orientation="horizontal">
 
-            <TextView
+            <EditText
+                android:id="@+id/z1Value"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:hint="Nhập giá trị"
+                android:inputType="number"
                 android:textColor="#449D00"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <!-- Load Factor -->
+        <!-- Bước xích tải -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:text="Small sprocket teeth"
+            android:text="Bước xích tải, p (mm)"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginLeft="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
             android:layout_marginBottom="6dp"
             android:background="@drawable/grey_container"
             android:orientation="horizontal">
 
-            <TextView
+            <EditText
+                android:id="@+id/pValue"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:hint="Nhập giá trị"
+                android:inputType="numberDecimal"
                 android:textColor="#449D00"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <!-- Motor Speed -->
+        <!-- Số răng đĩa xích lớn (z2)-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:text="Large sprocket teeth"
+            android:text="Số răng đĩa xích lớn (z2)"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginLeft="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
             android:layout_marginBottom="6dp"
             android:background="@drawable/grey_container"
             android:orientation="horizontal">
 
-            <TextView
+            <EditText
+                android:id="@+id/z2Value"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:hint="Nhập giá trị"
+                android:inputType="numberDecimal"
                 android:textColor="#449D00"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="km/h"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="15dp"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="124dp"
-                android:layout_height="38dp"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/grey_bg_button">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="Show Equation"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="90dp"
-                android:layout_height="38dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:background="@drawable/grey_bg_button"
-
-                >
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="Import"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="80dp"
-                android:layout_height="38dp"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/grey_bg_button">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="Reset"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </LinearLayout>
     </LinearLayout>
 
+    <!-- Buttons (kept unchanged as per your request) -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
         android:layout_below="@id/calculateBox"
-        android:gravity="center"
-
-        >
+        android:gravity="center">
 
         <LinearLayout
             android:id="@+id/calculate"
             android:layout_width="245dp"
             android:layout_height="45dp"
             android:background="@drawable/button_black_rounded"
-            android:gravity="center"
-
-            >
+            android:gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -298,9 +235,9 @@
                 android:text="Calculate"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
-                android:textStyle="bold"
-
-                />
+                android:textStyle="bold" />
         </LinearLayout>
+
+        <!-- Keep other buttons as is -->
     </LinearLayout>
 </RelativeLayout>
